--- a/index.html
+++ b/index.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
-<html lang = kr>
-    <head>
-        <title> CRAZY PLAN </title>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Connect CSS -->
-        <link rel="stylesheet" href="CSS/sytle.css">
-    </head>
-    <body>
-            <h2 id="clock">00:00:00</h2>
-            <form class="hidden" id="login-form">
-              <input
-                required
-                maxlength="15"
-                type="text"
-                placeholder="What is your name?"
-              />
-              <input type="submit" value="Log In" />
-            </form>
-            <h1 class="hidden" id="greeting"></h1>
-            <form id="todo-form">
-              <input type="text" placeholder="Write a To Do and Press Enter" required />
-            </form>
-            <ul id="todo-list"></ul>
-            <div id="quote">
-              <span></span>
-              <span></span>
-            </div>
-            <div id="weather">
-              <span></span>
-              <span></span>
-            </div>
-        </div>
+<html lang=kr>
 
-        <!-- JavaScript-->
-        <script src = "js/background.js"></script>
-        <script src = "js/clock.js"></script>
-        <script src ="js/greetings.js"></script>
-        <script src ="js/quotes.js"></script>
-        <script src = "js/quotes.js"></script>
-        <script src = "js/todo.js"></script>  
-        <script src ="js/Utahclock.js"></script>
-        <script src ="js/weather.js"></script>
-    </body>
+<head>
+  <title> Learn about JavaScript </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Connect CSS -->
+  <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+  <form class="clock">
+    <h2 id="clock">00:00:00</h2>
+    <h2 id="UtahClock">00:00:00</h2>
+  </form>
+  <form class="hidden" id="login-form">
+    <input required maxlength="15" type="text" placeholder="What is your name?" />
+    <input type="submit" value="Log In" />
+  </form>
+  <h1 class="hidden" id="greeting"></h1>
+  <form id="todo-form">
+    <input type="text" placeholder="Write a To Do and Press Enter" required />
+  </form>
+  <ul id="todo-list"></ul>
+  <div id="quote">
+    <span></span>
+    <span></span>
+  </div>
+  <div id="weather">
+    <span></span>
+    <span></span>
+  </div>
+  </div>
+
+  <!-- JavaScript-->
+  <script src="js/background.js"></script>
+  <script src="js/clock.js"></script>
+  <script src="js/greetings.js"></script>
+  <script src="js/quotes.js"></script>
+  <script src="js/quotes.js"></script>
+  <script src="js/todo.js"></script>
+  <script src="js/Utahclock.js"></script>
+  <script src="js/weather.js"></script>
+</body>
+
 </html>
